--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,14 @@ ul {
     text-decoration: none;
 }
 
+.Dark{
+    background-color: rgb(51, 51, 51);
+}
+
+body{
+    background-color: #fff;
+}
+
 @mixin flex {
     display: flex;
     align-items: center;
@@ -50,15 +58,15 @@ ul {
 }
 @media(max-width: 645px){
  
-    .nav_Sneaker{background-color:$White; height: 5vh; }
+    .nav_Sneaker{ height: 5vh; }
     .nav_Sneaker
     .nav_hamburguesa{padding: 10px; display: flex; justify-content: center; align-items: center; margin-right:auto; }
-    #menu_hamburguesa{margin-right: auto; width: 12%; height: 3vh; }
+    #menu_hamburguesa{cursor: pointer; margin-right: auto; width: 12%; height: 3vh; }
     #logo_hamburguesa{width: 50%; height: 3vh; margin-right: auto;}
     .nav_Sneaker
     .ul_Sneaker .logo{display: none;}
-        .ul_Sneaker{flex-direction: column; position: fixed; top:60px; right: 100%; transition:all 0.8s ease; background-color: $White; width: 100%; height: 100vh;  font-size: 18px;}
-        .ul_Sneaker_re{ flex-direction: column;  right: 40%; line-height: 60px;}
+        .ul_Sneaker{box-shadow: 5px 5px 10px rgba(3, 3, 3, 0.473) ; flex-direction: column; position: fixed; top:0px; right: 100%; transition:all 0.8s ease; background-color: $White; width: 100%; height: 100vh;  font-size: 18px;}
+        .ul_Sneaker_re{flex-direction: column;  right: 40%; line-height: 60px;}
         .header_Sneaker{
         flex-direction: column;
         .header_article .img1{ width: 100vw; margin-top: 25px; border-radius: 0%;}
@@ -92,7 +100,7 @@ ul {
 /*nav*/
 .nav_Sneaker{
     @include flex;
-    padding: 20px;
+    padding: 10px;
 }
 
 .nav_Sneaker img {height: 3vh; width: 30%;}
@@ -103,6 +111,7 @@ ul {
 .article_Sneaker .carshop{height:3vh; width: 20%; cursor: pointer; margin-right: 20px;}
 .article_Sneaker .avatar{ height:5vh; width: 40%;}
 .article_Sneaker .avatar:hover{border-radius: 100%; cursor: pointer; border:1px solid $Orange;}
+.ul_Sneaker .fa-solid{font-size: 15px; margin-left: 50px; cursor: pointer;}
 
 /*Header*/
 
