--- a/scss/style.scss
+++ b/scss/style.scss
@@ -132,85 +132,30 @@ body{
     .header_article_txt h3{color: $Orange; font-size: 16px;}
     .header_article_txt h2{margin-top: 10px; font-size: 30px;}
     .header_article_txt p{margin-top: 22px; color: $Darkgrayishblue; font-size: 16px;}
-
-    .header_article_txt
-    .precio{color: #000;}
-
-
-    .header_article_txt
-    .precio span{color:$Orange; font-size: 10px; margin-left: 10px;}
+    .header_article_txt .precio{color: #000;}
+    .header_article_txt .precio span{color:$Orange; font-size: 10px; margin-left: 10px;}
     .header_article_txt .pa{font-size: 10px;}
     .cash_Sneaker{display: flex; margin-top: 15px;}
-    .cash_Sneaker
-    button{ cursor: pointer; margin-left: 10px; font-size: 15px; width: 30%; background-color: $Orange; border: none; border-radius: 10px; height: 7vh; text-align: center; color: #fff;}
-    .cash_Sneaker
-    button img{height: 2vh; margin-right: 5px;}
+    .cash_Sneaker button{ cursor: pointer; margin-left: 10px; font-size: 15px; width: 30%; background-color: $Orange; border: none; border-radius: 10px; height: 7vh; text-align: center; color: #fff;}
+    .cash_Sneaker button img{height: 2vh; margin-right: 5px;}
     .cash_Sneaker .cantidad .menos{cursor: pointer; margin-right: 25px; color: $Orange; font-size: 25px;}
     .cash_Sneaker .cantidad .mas{ cursor:pointer; margin-left: 25px; font-size: 25px; color: $Orange;}
-    .cash_Sneaker .cantidad{
-        text-align: center;
-        width: 20%;
-        background-color: $Paleorange; padding: 5px; border-radius: 10px;
-    }
+    .cash_Sneaker .cantidad{ text-align: center; width: 20%;background-color: $Paleorange; padding: 5px; border-radius: 10px;}
 
-    .view{
-       // visibility: visible;
-    position:fixed;
-    z-index: 1000;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(124, 124, 124, 0.603);
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    }
+    .view{ position:fixed;z-index: 1000; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(124, 124, 124, 0.603); display:flex;align-items: center;justify-content: center;}
+    .view .articulo p{ display: flex; font-size: 20px; color: #000;
+    cursor: pointer; justify-content: flex-end; }
+    .articulo .principallogo{height: 60vh; border-radius: 15px;}
+    .view article .sneaker0{height: 10vh; margin-top: 10px; border-radius: 10px; margin-left: 35px;}
+    .view article img:hover{background-color: $White; border: 2px solid $Orange;}
+    .view .flex{display: flex; justify-content: center; align-items: center;}
+    .view .arti .articulo .avanzar{ height: 3vh; margin: 10px; cursor: pointer;}
 
-    .view
-    .articulo p{
-        display: flex;
-        font-size: 20px;
-        color: #000;
-        cursor: pointer;
-        justify-content: flex-end;
-    }
-
-    .articulo .principallogo{height: 60vh;}
-    .view
-    article img{height: 10vh; margin-top: 10px; border-radius: 10px; margin-left: 35px;}
-
-    .view
-    article img:hover{background-color: $White; border: 2px solid $Orange;}
-
-    #cart{
-    position:absolute;
-    margin:0 auto;
-    z-index: 999999999;
-    width: auto;
-    height: auto;
-    box-shadow: 5px 5px 10px rgb(163, 163, 163);
-    border-radius: 10px;
-    padding: 10px;
-    background-color: white;
-    }
-
-    #cart .h4_h4{
-        text-align: center;
-        margin:35px auto;
-        color: $Grayishblue;
-    }
-
-    #cart
-    div{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    #cart
-    .carshop{
-        font-size: 15px;
-    }
+    #cart{position:absolute;margin:0 auto; z-index: 999999999; width: auto; height: auto; box-shadow: 5px 5px 10px rgb(163, 163, 163); border-radius: 10px; padding: 10px; background-color: white;  }
+    #cart .h4_h4{ text-align: center; margin:35px auto;color: $Grayishblue;}
+    #cart div{ display: flex; justify-content: space-between;
+        align-items: center; }
+    #cart .carshop{font-size: 15px;}
     .addimg{display: flex; flex-direction: column;}
     .addimg .buy{display: flex; align-items: center; margin:auto 25px;}
     .addimg .buy .imgg{height:7vh; border-radius: 10%; width: 30%;}
@@ -220,5 +165,6 @@ body{
     .delete img{height: 3vh; width: 80%; cursor: pointer;}
     .addimg  button{margin-left: 15px; border: none; border-radius: 10px; background-color: $Orange; color: #fff; width: 100%; height: 4vh; cursor: pointer  ;}
     .addimg  button:hover{color: #000;}
+    
     
 
