--- a/scss/style.scss
+++ b/scss/style.scss
@@ -143,13 +143,9 @@ body{
     .cash_Sneaker .cantidad{ text-align: center; width: 20%;background-color: $Paleorange; padding: 5px; border-radius: 10px;}
 
     .view{ position:fixed;z-index: 1000; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(124, 124, 124, 0.603); display:flex;align-items: center;justify-content: center;}
-    .view .articulo p{ display: flex; font-size: 20px; color: #000;
-    cursor: pointer; justify-content: flex-end; }
-    .articulo .principallogo{height: 60vh; border-radius: 15px;}
-    .view article .sneaker0{height: 10vh; margin-top: 10px; border-radius: 10px; margin-left: 35px;}
-    .view article img:hover{background-color: $White; border: 2px solid $Orange;}
-    .view .flex{display: flex; justify-content: center; align-items: center;}
-    .view .arti .articulo .avanzar{ height: 3vh; margin: 10px; cursor: pointer;}
+    .view .articulo p{ display: flex; justify-content: flex-end; }
+    .view .articulo p img{ height: 3vh; margin-bottom: 5px; cursor: pointer;}
+    .articulo .principallogo{height: 60vh; border-radius: 15px; background-size: cover; cursor: pointer;}
 
     #cart{position:absolute;margin:0 auto; z-index: 999999999; width: auto; height: auto; box-shadow: 5px 5px 10px rgb(163, 163, 163); border-radius: 10px; padding: 10px; background-color: white;  }
     #cart .h4_h4{ text-align: center; margin:35px auto;color: $Grayishblue;}
